# Ai_Ecommerece_Chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
chatbot_ecommerce/: auth.py  database.py  frontend.py  main.py  models.py  pyproject.toml
